feat(backend): add new responses codes to swagger documentation
